Fix the build for Java 9